/*
package com.ap2.replocker.report_collection.report;

import com.ap2.replocker.admin.AdminService;
import com.ap2.replocker.report_collection.ReportCollectionService;
import io.swagger.v3.oas.annotations.security.SecurityRequirement;
import lombok.RequiredArgsConstructor;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

*/
/**
 * @author Dave AKN
 * @version 1.0
 *//*

@RestController
@RequestMapping("/reports")
@SecurityRequirement(name = "keycloak")
@RequiredArgsConstructor
public class ReportController {
    private final ReportService reportService;
    private final ReportCollectionService reportCollectionService;
    private final AdminService adminService;


}
*/
