package com.ap2.replocker.report_collection.report;

public interface ReportRepository {
}
